finished chat app and starting new website

--- a/Day-2/new-website/index.html
+++ b/Day-2/new-website/index.html
@@ -45,7 +45,10 @@
                 </div>
             </div>
             <div id="content">
-                <div class="contents"></div>
+                <div class="contents">
+                    <div id="content-head">News</div>
+                    <div id="content-main">Officials apologize and say charges will be dropped after Black reporter is arrested covering Proud Boys rally</div>
+                </div>
                 <div class="contents"></div>
             </div>
         </div>
